# project-manager

./: .gitignore  CMakeLists.txt  README.md
res/: UI.fbp  gui.cpp  gui.h
scr/: main.cpp  main.h
scr/gui/: UI.fbp  add_project.cpp  add_project.h  mainframe.cpp  mainframe.h
scr/gui/res/: gui.cpp  gui.h
scr/logic/: read_project.cpp  write_project.h
scr/util/: read_project.h  write_project.cpp  write_project.h
